...
        label.text = "15"
        label.numberOfLines = 1
        label.textColor = .label
        return label
    }()
    
    lazy var buttonPlus: UIButton = {
        let button = UIButton()
        button.addTarget(self, action: #selector(plus), for: .touchUpInside)
        button.setImage(UIImage(systemName: "plus"), for: .normal)
        button.layer.borderWidth = 1
        button.layer.cornerRadius = 8
        button.layer.masksToBounds = true
        button.accessibilityIdentifier = "buttonPlus"
        return button
    }()
    
    lazy var buttonMinus: UIButton = {
        let button = UIButton()
        button.addTarget(self, action: #selector(minus), for: .touchUpInside)
        button.setImage(UIImage(systemName: "minus"), for: .normal)
        button.layer.borderWidth = 1
        button.layer.cornerRadius = 8
        button.layer.masksToBounds = true
...
