...
        button.layer.shadowOffset = CGSize(width: 0.5, height: 0.5)
       return button
   }()
   
   let saveButton: UIButton = {
       let button = UIButton()
       button.setTitle("Salvar", for: .normal)
        button.setTitleColor(.blueAct, for: .normal)
       button.setTitle("", for: .disabled)
       button.isEnabled = false
       button.addTarget(self, action: #selector(salvar), for: .touchUpInside)
        button.layer.shadowColor = UIColor.black.cgColor
        button.layer.shadowRadius = 1.0
...
