...

// swiftlint:disable function_body_length
extension CellData {
    static func data() -> [CellData] {
        return   [CellData(title: "Gênesis", abbrev: "gn", items: 50),
                  CellData(title: "Êxodo", abbrev: "ex", items: 40),
                  CellData(title: "Levítico", abbrev: "lv", items: 27),
                  CellData(title: "Números", abbrev: "nm", items: 36),
                  CellData(title: "Deuteronômio", abbrev: "dt", items: 34),
                  CellData(title: "Josué", abbrev: "js", items: 24),
                  CellData(title: "Juízes", abbrev: "jz", items: 21),
                  CellData(title: "Rute", abbrev: "rt", items: 4),
                  CellData(title: "1 Samuel", abbrev: "1sm", items: 31),
                  CellData(title: "2 Samuel", abbrev: "2sm", items: 24),
...
